<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014 The OmniROM Project
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

        <SwitchPreference
                android:key="kcal_enabled"
                android:title="@string/kcal_enabled_title"
                android:summary="@string/kcal_enabled_summary"
                android:persistent="false" />
        <org.omnirom.device.SeekBarPreference
                android:key="kcal_red"
                android:title="@string/kcal_red"
                android:max="256"
                android:dependency="kcal_enabled"
                android:persistent="false" />
        <org.omnirom.device.SeekBarPreference
                android:key="kcal_green"
                android:title="@string/kcal_green"
                android:max="256"
                android:dependency="kcal_enabled"
                android:persistent="false" />
        <org.omnirom.device.SeekBarPreference
                android:key="kcal_blue"
                android:title="@string/kcal_blue"
                android:max="256"
                android:dependency="kcal_enabled"
                android:persistent="false" />
        <org.omnirom.device.SeekBarPreference
                android:key="kcal_contrast"
                android:title="@string/kcal_contrast"
                android:max="256"
                android:dependency="kcal_enabled"
                android:persistent="false" />
        <org.omnirom.device.SeekBarPreference
                android:key="kcal_saturation"
                android:title="@string/kcal_saturation"
                android:max="256"
                android:dependency="kcal_enabled"
                android:persistent="false" />
</PreferenceScreen>
